# CamScripts

./: CMakeLists.txt  CamFullProcessExample.FcMacro  CamLibTbAdd.py  CamLibTbAddExample.FCMacro  CamLibTbAdd_TESTING.FCMacro  CamScripting.py  CamScriptingExample.FcMacro  CamScriptingLib.py  CamTbAddExample.FCMacro  CamTbAddLib.py  CamTbAdd_Importing.FCMacro  CamTbAdd_TESTING.FCMacro  JobUtils.py  MANIFEST.in  README 1 Import CSV Tool data.md  README 2 Tool Bits Add Example.md  README 3 Cam Full Process Example.md  README 4 Naming Rules.md  README.md  README2.md  README_1_ImportCSVToolData.md  README_2_ToolBitsAddExample.md  README_3_CamFullProcessExample.md  README_NamingRules.md  README_more123.MD  README_outline.md  create_toolbit.FCMacro  package.xml  setup.py  temp.txt
cutting_tool_data/: Rake_Helix_Angles_TESTS.csv  cuttingtools1.csv  no_dia_col.csv
cutting_tool_data/Shape/: pcb corncutters.fcstd
freecad/cam_scripts/: CamFullProcessExample.FcMacro  CamFullProcessExample.py  CamScriptingLib.py  CamScripts_1CSV_Import.FCMacro  CamScripts_2TbAddExample.FCMacro  CamScripts_3FullProcessExample.FcMacro  CamScripts_5Setup_Additional_Items.FcMacro  CamScripts_6Setup_CustomMaterialCfg.FcMacro  CamTbAddExample.py  utils.py  (+5 more)
images/: Example1 Tools & Tree.xcf
naming_rules/: boboxx_naming_rules.py  ex_naming_rules.py  test_mixed.py
script_run_macros/: CamScripts_1CSV_Import.FCMacro  CamScripts_2TbAddExample.FCMacro  CamScripts_3FullProcessExample.FcMacro  CamScripts_4READMEs.FcMacro  CamScripts_5Setup_CustomToolShapes.FcMacro  CamScripts_6Setup_CustomMaterialCfg.FcMacro
(+14 files in other folders)
